# vulnHunterV2

./: .replit  README.md  main.py  pyproject.toml  replit.nix  simpleWeb.py
modules/: backup.py  dirFinder.py  full.py  nmap.py  settings.py  vuln.py
output/dirFinder/: localhost_8000.txt
output/nmap/: 8.8.8.8.txt  testhtml5.vulnweb.com.txt  testhtml5.vulnweb.com_.txt  x.txt  y
testBackup/: backupListGen.py  extensions.txt
utils/: modulesIndex.py  utils.py
utils/wordlist/: defaultDirFinder copy.txt  defaultDirFinderLONG.txt  defaultDirFinderSmall.txt  small.txt  testSmall.txt
