[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "aiohttp>=3.12.15",
    "colorama>=0.4.6",
    "pycurl>=7.45.7",
    "pyfiglet>=1.0.4",
    "questionary>=2.1.1",
    "requests>=2.32.5",
    "rich>=14.1.0",
]
